CSS: Fix dark mode accordion text color

--- a/themes/xmpp-providers/assets/css/style.css
+++ b/themes/xmpp-providers/assets/css/style.css
@@ -184,6 +184,9 @@ table.sortable th:hover {
         background-color: var(--bs-gray-400);
     }
     .accordion-item {
+        color: #ccc;
+    }
+    .accordion-item {
         border-color: #4a5660;
         background-color: #4c4c4c;
     }
